Use new StyleManager instead of new Library
Signed-off-by: Thomas ADAM <tadam@silicom.fr>